minor cropping bug fix

--- a/ImagingServer/server/static/css/style.css
+++ b/ImagingServer/server/static/css/style.css
@@ -79,8 +79,8 @@ nav form {
 }
 
 #container {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 #focused {
